[package]
name = "rustlink"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
log4rs = "1.3.0"
sled = "0.34.7"
tokio = {version="1.37.0",features=["full"]}
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0",features=["rpc-types-eth","eips","signers","signer-wallet","consensus","network","providers","transports","transport-http","contract"] }
reqwest = "0.12.4"
