[package]
name = "rustlink"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.21"
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = ["rpc-types-eth","eips","signers","signer-wallet","consensus","network","providers","transports","transport-http","contract"] }
reqwest = "0.12.4"
bincode = "1.3.3"
serde = "1.0.201"
thiserror = "1.0.60"
workflow-rs = { version = "0.12.1", features = ["full"] }

# Async-std included for all builds
async-std = "1.12.0"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"
futures = "0.3.30"
web-sys = "0.3.69"

# Dependencies for non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = "1.37.0"

# Optional dependencies or features specific to WASM can be added here
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Add wasm-specific dependencies if any (e.g. wasm-bindgen, web-sys, etc.)

[lints.clippy]
empty_docs = "allow"

[lib]
crate-type = ["cdylib", "rlib"]
